# ghostmirror

./: README.md  meson.build
bash-completion/: ghostmirror-cachyos  ghostmirror-catchyos
distro/: PKGBUILD
include/gm/: arch.h  archive.h
man/: gen-manpages.sh  ghostmirror-cachyos.1  ghostmirror-cachyos.1.skel  ghostmirror-catchyos.1  ghostmirror-catchyos.1.skel
python/: README.md  pyproject.toml
python/src/ghostmirror/: cli.py  core.py  country.py  fetch.py  investigation.py  mirror.py  output.py  parse.py  rank.py  systemd.py
python/tests/: test_core.py  test_country.py  test_fetch.py  test_output.py  test_parse.py  test_rank.py
src/: arch.c  archive.c  gm.c  investigation.c
